Docker/Activities/redis-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: redis
  template:
    metadata:
      labels:
        component: redis
    spec:
      containers:
        - name: redis
          image: docker.io/axelsilverdew/complex_redis
          ports:
            - containerPort: 6379
          resources:
                limits:
                    memory: "128Mi"
                    cpu: "500m" 

# TODO: Add Env Vars for Postgres
