Docker/Activities/server-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: server
  template:
    metadata:
      labels:
        component: server
    spec:
      containers:
        - name: server
          image: docker.io/axelsilverdew/complex_api
          ports:
            - containerPort: 5000
          resources:
                limits:
                    memory: "128Mi"
                    cpu: "500m"
