Docker/Activities/worker-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
spec:
  selector:
    matchLabels:
      component: worker
  template:
    metadata:
      labels:
        component: worker
    spec:
      containers:
        - name: worker
          image: docker.io/axelsilverdew/complex_worker
          resources:
                limits:
                    memory: "128Mi"
                    cpu: "500m"
